// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <P> Второго уровня 1`] = `
<p
  className="sc-bdVaJa jybYuA"
  size={2}
>
  Paragraph
</p>
`;

exports[`Верстка компонента <P> Дефолтная 1`] = `
<p
  className="sc-bdVaJa fVTZdn"
  size={1}
>
  Paragraph
</p>
`;

exports[`Верстка компонента <P> Первого уровня 1`] = `
<p
  className="sc-bdVaJa fVTZdn"
  size={1}
>
  Paragraph
</p>
`;

exports[`Верстка компонента <P> Третьего уровня 1`] = `
<p
  className="sc-bdVaJa bvLwTA"
  size={3}
>
  Paragraph
</p>
`;
